# marketchatter

./: .gitignore  ARCHITECTURE.md  CLEANUP_COMPLETE.md  CLEANUP_REPORT.md  DB_CONNECTION_POOL_FIX.md  DEPLOYMENT_CHECKLIST.md  DUPLICATE_DOCUMENT_FIX.md  FINAL_CLEANUP_REPORT.md  FINAL_PRODUCTION_VALIDATION.md  POST_REFACTOR_VALIDATION.md  README_VFIS.md  README_VFIS_DEPLOYMENT.md  REFACTORING_COMPLETE.md  REFACTORING_VFIS.md  REPOSITORY_CLEANUP_REPORT.md  SYSTEM_REFACTOR_COMPLETE.md  VFIS_COMPLETE.md  VFIS_INGESTION_FINAL.md  VFIS_PDF_INGESTION_COMPLETE.md  VFIS_POSTGRES_IMPLEMENTATION.md  VFIS_POSTGRES_SUMMARY.md  VFIS_STEP4_COMPLETE.md  VFIS_STEP5_COMPLETE.md  VFIS_STEP6_COMPLETE.md  VFIS_STRUCTURE.md  WINDOWS_TEMP_FILE_CLEANUP_FIX.md  pyproject.toml  render.yaml  requirements.txt  setup.py  test_azure_llm.py  vfis_main.py
deployment/: README.md  azure_app_service.md
migrations/: 001_market_chatter_schema.sql
scripts/: init_database.py  init_env.py
tradingagents/: default_config.py
tradingagents/database/: __init__.py  audit.py  chatter_dal.py  chatter_persist.py  connection.py  dal.py  migrations.py  schema.py
tradingagents/dataflows/: __init__.py  alpha_vantage_chatter.py  chatter_interface.py  chatter_schema.py  ingest_chatter.py  postgresql_data.py
tradingagents/graph/: trading_graph.py
vfis/: README.md  __init__.py  bootstrap.py  vfis_system.py
vfis/agents/: __init__.py  bear_agent.py  bull_agent.py  debate_orchestrator.py  final_output_assembly.py  risk_management_agent.py  verified_data_agent.py
vfis/api/: __init__.py  app.py  health.py  (+1 more)
(+47 files in other folders)
