[project]
name = "vfis"
version = "1.0.0"
description = "Verified Financial Intelligence System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "psycopg2-binary>=2.9.0",
    "SQLAlchemy>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "chromadb>=0.4.0",
    "feedparser>=6.0.0",
    "yfinance>=0.2.30",
    "stockstats>=0.5.0",
    "pdfplumber>=0.10.0",
    "opencv-python-headless>=4.8.0",
    "textblob>=0.17.0",
    "vaderSentiment>=3.3.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "tqdm>=4.65.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
